--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -9,7 +9,7 @@ $fortnightly-primary-color: #6b38fb;
 $body-font-family: 'Libre Franklin', sans-serif;
 $border-radius-root: 0;
 $btn-font-weight: 700;
-$heading-font-family: 'Merriweather', sans-serif;
+$heading-font-family: 'Libre Franklin' sans-serif;
 $headings: (
   'h1': (
     'font-family': $heading-font-family,
@@ -91,3 +91,123 @@ $material-light: (
   'chips': #ffffff,
 );
 $stepper-elevation: 0;
+
+@use 'vuetify/lib/styles/settings'  with (
+  $body-font-family: 'Libre Franklin' sans-serif,
+  $heading-font-family: 'Libre Franklin' sans-serif,
+  $typography:  (
+    'h1': (
+      'size': 6rem,
+      'weight': 900,
+      'line-height': 6rem,
+      'letter-spacing': -.015625em,
+      'font-family': $heading-font-family,
+      'text-transform': none
+    ),
+    'h2': (
+      'size': 3.75rem,
+      'weight': 900,
+      'line-height': 3.75rem,
+      'letter-spacing': -.0083333333em,
+      'font-family': $heading-font-family,
+      'text-transform': none
+    ),
+    'h3': (
+      'size': 3rem,
+      'weight': 900,
+      'line-height': 3.125rem,
+      'letter-spacing': normal,
+      'font-family': $heading-font-family,
+      'text-transform': none
+    ),
+    'h4': (
+      'size': 2.125rem,
+      'weight': 900,
+      'line-height': 2.5rem,
+      'letter-spacing': .0073529412em,
+      'font-family': $heading-font-family,
+      'text-transform': none
+    ),
+    'h5': (
+      'size': 1.5rem,
+      'weight': 900,
+      'line-height': 2rem,
+      'letter-spacing': normal,
+      'font-family': $heading-font-family,
+      'text-transform': none
+    ),
+    'h6': (
+      'size': 1.25rem,
+      'weight': 900,
+      'line-height': 2rem,
+      'letter-spacing': .0125em,
+      'font-family': $heading-font-family,
+      'text-transform': none
+    ),
+    'subtitle-1': (
+      'size': 1rem,
+      'weight': normal,
+      'line-height': 1.75rem,
+      'letter-spacing': .009375em,
+      'font-family': $body-font-family,
+      'text-transform': none
+    ),
+    'subtitle-2': (
+      'size': .875rem,
+      'weight': 900,
+      'line-height': 1.375rem,
+      'letter-spacing': .0071428571em,
+      'font-family': $body-font-family,
+      'text-transform': none
+    ),
+    'body-1': (
+      'size': 1rem,
+      'weight': 900,
+      'line-height': 1.5rem,
+      'letter-spacing': .03125em,
+      'font-family': $body-font-family,
+      'text-transform': none
+    ),
+    'body-2': (
+      'size': .875rem,
+      'weight': 900,
+      'line-height': 1.25rem,
+      'letter-spacing': .0178571429em,
+      'font-family': $body-font-family,
+      'text-transform': none
+    ),
+    'button': (
+      'size': .875rem,
+      'weight': 900,
+      'line-height': 2.25rem,
+      'letter-spacing': .0892857143em,
+      'font-family': $body-font-family,
+      'text-transform': uppercase
+    ),
+    'caption': (
+      'size': .75rem,
+      'weight': 900,
+      'line-height': 1.25rem,
+      'letter-spacing': .0333333333em,
+      'font-family': $body-font-family,
+      'text-transform': none
+    ),
+    'overline': (
+      'size': .75rem,
+      'weight': 900,
+      'line-height': 2rem,
+      'letter-spacing': .1666666667em,
+      'font-family': $body-font-family,
+      'text-transform': uppercase
+    )
+  )
+);
+
+
+@use 'vuetify/lib/styles/generic';
+@use 'vuetify/lib/styles/elements';
+@use 'vuetify/lib/styles/utilities';
+
+.v-card-title.pa-1 {
+  font-weight: 700;
+}
